fix: overflow and scroling on phone

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 html,body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  touch-action: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 .App{
